<resources>
    <string name="app_name">Clild learning</string>

    <string name="splashy">Splashy</string>
    <string name="show_splashy">Show Splashy</string>
    <string name="title">Title</string>
    <string name="splash_screen_made_easy">Splash screen made easy</string>
    <string name="subtitle">Subtitle</string>
    <string name="show_title">SHOW TITLE</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="hi_good_morning">Hi, Good morning</string>
    <string name="general">General</string>
    <string name="todo3">TODO</string>
    <string name="transport">Transport</string>
    <string name="todo4">TODO</string>
    <string name="shopping">Shopping</string>
    <string name="todo5">TODO</string>
    <string name="bills">Bills</string>
    <string name="todo6">TODO</string>
    <string name="entertainment">Entertainment</string>
    <string name="todo9">TODO</string>
    <string name="grocery">Grocery</string>
    <string name="todo33">TODO</string>
    <string name="todo333">TODO</string>
    <string name="todo88">TODO</string>
    <string name="groceries">Groceries</string>
    <string name="todo66">TODO</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="todo666">TODO</string>
    <string name="beauty">Beauty</string>
    <string name="todo9998">TODO</string>
    <string name="home">Home</string>
    <string name="todo6666">TODO</string>
    <string name="shop_from_a_to_z">Shop from A to Z</string>
    <string name="electronics22">Electronics</string>
    <string name="todo55">TODO</string>
    <string name="todo00">TODO</string>
    <string name="todo102">TODO</string>
    <string name="todo1320">TODO</string>
    <string name="profile">Profile</string>
    <string name="add_video">Add Video</string>
    <string name="home54">Home</string>
    <string name="home9">Home</string>
    <string name="kid_video">Kid Video</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password!</string>
    <string name="create">Create</string>
    <string name="todok">TODO</string>
    <string name="emailh">Email</string>
    <string name="click_to_upload_video">Click to Upload Video</string>
</resources>