<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:id="@+id/bgVideoView"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
       >



        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/amazonName"
            android:text="Child Learning"
            android:textSize="25sp"
            android:textColor="@color/lavender"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amazonDesc"
            android:text="Learning app"
            android:textSize="20sp"
            android:layout_marginStart="18dp"
            android:textColor="@color/lavender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonName"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>

        <ImageView
            android:id="@+id/amazonImage"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo6666"
            android:src="@drawable/enlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/amazonName"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonImage">

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/clothingCard"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/cardGeneral"
                    android:background="#FFD233"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/clothingName"
                        android:text="ABCD"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato_black"
                        android:layout_marginTop="1dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/clothingImage"/>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:id="@+id/clothingImage"
                        android:src="@drawable/kidlogo2"
                        android:layout_marginTop="1dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo333" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/noti_btn"
                    android:background="#F55454"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/elecName"
                        android:text="POEM"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/lato_black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/elecImage"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/elecImage"
                        android:src="@drawable/kidlogo5"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo33" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/kidVideo"
                    android:background="#C78FF3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/homeName"
                        android:text="@string/kid_video"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/lato_bold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/homeImage"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/homeImage"
                        android:src="@drawable/kidlogo6"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo9998" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/beauty"
                    android:background="#4EE292"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyName"
                        android:text="@string/beauty"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/lato_black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/beautyImage"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/beautyImage"
                        android:src="@drawable/kidlogo7"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo666" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:background="#922DE1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pharmName"
                        android:text="@string/pharmacy"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/lato_black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/pharmImage"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/pharmImage"
                        android:src="@drawable/kidlogo5"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo88" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:background="#7F8EE1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/grocName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/grocImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/groceries"
                        android:textColor="@color/lavender"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/grocImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/todo66"
                        android:src="@drawable/kidlogo2" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>